ci: turn update:openapi into scheduled
Convert the update:openapi job so it only runs when triggered
but a schedule. In this case, it will run every day at midnight.
Update openapi job to use current TOKEN made available by the banter bus
bot. To automatically push changes back to the master branch.
